--- a/src/styles/app/index.scss
+++ b/src/styles/app/index.scss
@@ -3,6 +3,11 @@
 @import "../colors";
 @import "fonts";
 
+@mixin mask($gradient) {
+  -webkit-mask-box-image: $gradient;
+  mask-box-image: $gradient;
+}
+
 html {
   background: $navy-blue;
 }
@@ -22,31 +27,65 @@ body {
 .app {
   flex: 1;
   min-height: 100vh;
-  &--backdrop {
+  &--backdrop--top, &--backdrop--bottom {
     z-index: 1;
     position: fixed;
-    width: 100vw;
     height: 100vh;
+    width: 100vw;
     overflow: hidden;
-    background-image: url("../../images/app/background-desktop.png"), url("../../images/app/stars-desktop.png"), linear-gradient(135deg, $navy-blue, $purple);
-    background-repeat: repeat-x, repeat-x, no-repeat;
-    background-size: (1318px / 2) (492px / 2), (990px / 2) (850px / 2), 100% 100%;
-    animation: stars 40s linear infinite;
+    background: linear-gradient(135deg, $navy-blue, $purple) no-repeat;
+    background-size: 100% 100%;
+  }
 
-    @keyframes stars {
-      from { background-position: center bottom, (990px / 2) bottom; }
-      to { background-position: center bottom, 0px bottom; }
+  &--backdrop--top {
+    top: 0;
+    left: 0;
+    @include mask(linear-gradient(to bottom, white 0%, white 75%, rgba(white, 0) 85%, rgba(white, 0) 100%));
+  }
+
+  &--backdrop--bottom {
+    bottom: 0;
+    left: 0;
+    @include mask(linear-gradient(to top, white 0%, white 75%, rgba(white, 0) 85%, rgba(white, 0) 100%));
+
+    &--stars, &--trees {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100vw;
     }
 
-    @include mobile {
-      background-image: url("../../images/app/background-mobile.png"), url("../../images/app/stars-desktop.png"), linear-gradient(135deg, $navy-blue, $purple);
-      background-repeat: repeat-x, repeat-x, no-repeat;
-      background-size: (1318px / 2) (307px / 2), (990px / 2.5) (850px / 2.5), 100% 100%;
-      animation: stars-mobile 27s linear infinite;
+    &--stars {
+      height: (850px / 2);
+      background: url("../../images/app/stars-desktop.png") repeat-x;
+      background-size: (990px / 2) (850px / 2);
+      animation: stars 40s linear infinite;
 
-      @keyframes stars-mobile {
-        from { background-position: center bottom, (990px / 2.5) bottom; }
-        to { background-position: center bottom, 0px bottom; }
+      @keyframes stars {
+        from { background-position: (990px / 2) bottom; }
+        to { background-position: 0px bottom; }
+      }
+
+      @include mobile {
+        height: (850px / 2.5);
+        background-size: (990px / 2.5) (850px / 2.5);
+        animation: stars-mobile 27s linear infinite;
+
+        @keyframes stars-mobile {
+          from { background-position: (990px / 2.5) bottom; }
+          to { background-position: 0px bottom; }
+        }
+      }
+    }
+
+    &--trees {
+      height: (492px / 2);
+      background: url("../../images/app/background-desktop.png") repeat-x;
+      background-size: (1318px / 2) (492px / 2);
+      @include mobile {
+        height: (307px / 2);
+        background: url("../../images/app/background-mobile.png") repeat-x;
+        background-size: (1318px / 2) (307px / 2);
       }
     }
   }
