--- a/src/styles/pages/home/index.scss
+++ b/src/styles/pages/home/index.scss
@@ -3,6 +3,15 @@
 $class: "home";
 
 .#{$class} {
+  &--preload-font {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -10000;
+    pointer-events: none;
+    opacity: 0;
+  }
+
   &--images {
     width: 100%;
     &--image {
